--- a/templates/account/admin/appartment.html
+++ b/templates/account/admin/appartment.html
@@ -22,7 +22,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4">
-                <form action="">
+                <form action="" enctype="multipart/form-data" method="post">
                     {% csrf_token %}
                     {{form}}
                     <input type="submit" value="Save">
