dcoker compose file updated

--- a/templates/account/admin/appartment.html
+++ b/templates/account/admin/appartment.html
@@ -51,12 +51,14 @@
                                   </tr>
                                 </thead>
                                 <tbody>
-                                 
+                                 {% if get_apartment_posted %}
+                                 {% for apartment in get_apartment_posted %}
                                   <tr >
-                                    <td><a href="#" ></a></td>
-                                    <td ></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>{{ apartment.counter }}</td>
+                                    <td><a href="#" >{{ apartment.appartment_name }}</a></td>
+                                    <td >{{ apartment.created_at }}</td>
+                                    <td>{{ apartment.uploaded_by }}</td>
+                                    
                                     
                                     
 
@@ -68,7 +70,8 @@
                                       <a  data-toggle="modal" data-target="#deletestoreProductModal" class="btn btn-sm btn-outline-danger"><i class="fas fas fas far fa-trash-alt"></i></a>
                                     </td>
                                   </tr>
-                                
+                                  {% endfor %}
+                                {% endif %}
                                 </tbody>
                               </table>
                             </div>
