--- a/templates/account/admin/base.html
+++ b/templates/account/admin/base.html
@@ -69,7 +69,7 @@
         <span>Dashboard</span></a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="{% url 'account:appartment' %}">
+      <a class="nav-link" href="{% url 'account:Apartment' %}">
         <i class="fas far far fa-store-alt fa-2x text-success"></i>
         <span>Apartments</span></a>
     </li>
@@ -194,7 +194,7 @@
         placeholder: "Select User",
         allowClear: true
       })
-      $('#id_appartment_type').select2({
+      $('#id_Apartment_type').select2({
         placeholder: "Select Type",
         allowClear: true
       })
