--- a/templates/account/admin/base.html
+++ b/templates/account/admin/base.html
@@ -9,7 +9,6 @@
   <meta name="author" content="Halidy-coder">
   <link href="{% static 'img/logo/logo.jpg' %}" rel="icon"> 
   <title>ARS- {% block title %} {% endblock %}</title>
-  <link href="{% static './assets/css/bs5.min.css' %}" rel="stylesheet" >
 
   <script src="{% static './assets/js/demo/chart.js' %}"></script>
   <link href="{% static './assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -29,6 +28,7 @@
   <link rel="stylesheet" href="{% static './assets/css/dashboard.css' %}">
   <script src="{% static './assets/js/jquery.min.js' %}"></script>
   <script src="{% static './assets/js/chart.umd.js' %}"></script>
+  
   <style>
     .card-header , .card-footer{
       display: none !important;
@@ -194,7 +194,7 @@
         placeholder: "Select User",
         allowClear: true
       })
-      $('#id_Apartment_type').select2({
+      $('#id_apartment_type').select2({
         placeholder: "Select Type",
         allowClear: true
       })
