--- a/templates/account/admin/base.html
+++ b/templates/account/admin/base.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Halidy-coder">
   <link href="{% static 'img/logo/logo.jpg' %}" rel="icon"> 
   <title>ARS- {% block title %} {% endblock %}</title>
+  <link href="{% static './assets/css/bs5.min.css' %}" rel="stylesheet" >
 
   <script src="{% static './assets/js/demo/chart.js' %}"></script>
   <link href="{% static './assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -28,7 +29,6 @@
   <link rel="stylesheet" href="{% static './assets/css/dashboard.css' %}">
   <script src="{% static './assets/js/jquery.min.js' %}"></script>
   <script src="{% static './assets/js/chart.umd.js' %}"></script>
-  
   <style>
     .card-header , .card-footer{
       display: none !important;
@@ -69,7 +69,7 @@
         <span>Dashboard</span></a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="{% url 'account:Apartment' %}">
+      <a class="nav-link" href="{% url 'account:apartment' %}">
         <i class="fas far far fa-store-alt fa-2x text-success"></i>
         <span>Apartments</span></a>
     </li>
