--- a/templates/account/admin/base.html
+++ b/templates/account/admin/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="Halidy-coder">
   <link href="{% static 'img/logo/logo.jpg' %}" rel="icon"> 
-  <title>dukani- {% block title %} {% endblock %}</title>
+  <title>RealEstateSolution.com- {% block title %} {% endblock %}</title>
   <script src="{% static './assets/js/demo/chart.js' %}"></script>
   <link href="{% static './assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static './assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
