--- a/templates/website/user/component/based2.html
+++ b/templates/website/user/component/based2.html
@@ -9,18 +9,27 @@
   <meta name="author" content="Halidy-coder">
   <link href="{% static 'img/logo/logo.jpg' %}" rel="icon"> 
   <title>ARS - {% block title %} {% endblock %}</title>
+ 
+  <link rel="stylesheet" type="text/css" href="{%static './assets/css/bootstrap.min.css'%}">
+  <link rel="stylesheet" href="{% static './assets/css/auth.css'%}">
+  <link rel="stylesheet" href="{% static './assets/css/reg.css'%}">
+
+
+  <link rel="stylesheet" type="text/css" href="{% static './assets/css/font-awesome.css'%}">
+
+  <link rel="stylesheet" href="{% static './assets/css/style.css' %}">
   <link href="{% static 'assets/css/bs5.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'assets/css/ruang-admin.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/css/chart.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/select2/dist/css/select2.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/bootstrap-touchspin/css/jquery.bootstrap-touchspin.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/clock-picker/clockpicker.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/css/ruang-admin.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/css/dashboard.css' %}" rel="stylesheet">
+<link href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'assets/css/ruang-admin.min.css' %}" rel="stylesheet">
+<link href="{% static 'assets/css/chart.css' %}" rel="stylesheet">
+<link href="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
+<link href="{% static 'assets/vendor/select2/dist/css/select2.min.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css' %}" rel="stylesheet">
+<link href="{% static 'assets/vendor/bootstrap-touchspin/css/jquery.bootstrap-touchspin.css' %}" rel="stylesheet">
+<link href="{% static 'assets/vendor/clock-picker/clockpicker.css' %}" rel="stylesheet">
+<link href="{% static 'assets/css/ruang-admin.css' %}" rel="stylesheet">
+<link href="{% static 'assets/css/dashboard.css' %}" rel="stylesheet">
   <style>
     .card-header, .card-footer {
       display: none !important;
@@ -41,10 +50,61 @@
     <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar" style="background-color: #000;">
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
         <div class="sidebar-brand-icon">
-          <span><h3>REALESTATE </span>
+          <span>ARS</span>
         </div> 
-        <div class="sidebar-brand-text mx-3">solution</div>
+        <div class="sidebar-brand-text mx-3">(v.1.0)</div>
       </a>
+      <hr class="sidebar-divider my-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'website:apartment' %}">
+          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <span>Apartment</span>
+        </a>
+      </li>
+      
+    </ul>
+    <!-- Sidebar -->
+    <div id="content-wrapper" class="d-flex flex-column">
+      <div id="content">
+        <!-- TopBar -->
+        <nav class="navbar navbar-expand navbar-light bg-navbar topbar mb-4 static-top">
+          <button id="sidebarToggleTop" class="btn btn-link rounded-circle mr-3">
+            <i class="fa fa-bars"></i>
+          </button>
+          <ul class="navbar-nav ml-auto">
+            {% if request.user.is_authenticated %}
+            <li class="nav-item dropdown no-arrow">
+              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <img class="img-profile rounded-circle" src="{% static 'img/logo/logo.jpg' %}" style="max-width: 60px">
+                <span class="ml-2 d-none d-lg-inline text-white small">{{ request.user.username }}</span>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                <a class="dropdown-item" href="#">
+                  <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Profile
+                </a>
+                <a class="dropdown-item" href="#">
+                  <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Activity Log
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal">
+                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Logout
+                </a>
+              </div>
+            </li>
+            {% endif %}
+          </ul>
+        </nav>
+        <!-- Topbar -->
+
+        <!-- Container Fluid-->
+        {% block content %} 
+        {% endblock %}
+        <!---Container Fluid-->
+      </div>
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
