--- a/templates/website/apartment.html
+++ b/templates/website/apartment.html
@@ -32,7 +32,7 @@
                         <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
 
                         <ul class="social-icons">
-                            <li><a href="property-details.html">+ View More</a></li>
+                            <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
                         </ul>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                         <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
 
                         <ul class="social-icons">
-                            <li><a href="property-details.html">+ View More</a></li>
+                            <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
                         </ul>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                         <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
 
                         <ul class="social-icons">
-                            <li><a href="property-details.html">+ View More</a></li>
+                            <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
                         </ul>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
         <br>
 
         <div class="main-button text-center">
-            <a href="properties.html">View Properties</a>
+            <a href="{%url 'website:property_details'%}">View Properties</a>
         </div>
     </div>
 </section>
