--- a/static/assets/css/auth.css
+++ b/static/assets/css/auth.css
@@ -3,12 +3,26 @@
     --shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, .15) !important;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    background-color: #fff; /* Example background color */
+    border-bottom: 1px solid #ccc; /* Optional border */
+    margin: 0;
+    padding: 0;
+}
+
 .login_form_section .inner_section {
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0; /* Ensure no extra margin here */
 }
 
 .login_form_section .inner_section form {
