--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -3,177 +3,139 @@
     {% load static %}
 
     <head>
-  
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-  
-      <title> ARS-{% block title %} {%endblock %}</title>
-  
-      <link rel="stylesheet" type="text/css" href="{%static './assets/css/bootstrap.min.css'%}">
-      <link rel="stylesheet" href="{% static './assets/css/auth.css'%}">
-      <link rel="stylesheet" href="{% static './assets/css/reg.css'%}">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+        <title>ARS - {% block title %}{% endblock %}</title>
 
-
-      <link rel="stylesheet" type="text/css" href="{% static './assets/css/font-awesome.css'%}">
-  
-      <link rel="stylesheet" href="{% static './assets/css/style.css' %}">
-      <link href="{% static 'assets/css/bs5.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'assets/css/ruang-admin.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/css/chart.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/select2/dist/css/select2.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/bootstrap-touchspin/css/jquery.bootstrap-touchspin.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/clock-picker/clockpicker.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/css/ruang-admin.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/css/dashboard.css' %}" rel="stylesheet">
-  
-      </head>
-      
-      <body>
-      
-      <!-- ***** Preloader Start ***** -->
-      <div id="js-preloader" class="js-preloader">
-        <div class="preloader-inner">
-          <span class="dot"></span>
-          <div class="dots">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-        </div>
-      </div>
-      <!-- ***** Preloader End ***** -->
-      
-      
-      <!-- ***** Header Area Start ***** -->
-      <header class="header-area header-sticky">
-          <div class="container">
-              <div class="row">
-                  <div class="col-12">
-                      <nav class="main-nav">
-                          <!-- ***** Logo Start ***** -->
-                          <a href="index.html" class="logo">Real Estate<em> Solution</em></a>
-                          <!-- ***** Logo End ***** -->
-                          <!-- ***** Menu Start ***** -->
-                          <ul class="nav">
-                              <li><a href="index.html" class="active">Home</a></li>
-                              <li><a href="{% url 'website:properties' %}">Properties</a></li>
-                              <li class="dropdown">
-                                  <a class="dropdown-toggle" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">About</a>
-                                
-                                  <div class="dropdown-menu">
-                                      <a class="dropdown-item" href="{%url 'website:about'%}">About Us</a>
-                                      <a class="dropdown-item" href="{%url 'website:team'%}">Team</a>
-                                      <a class="dropdown-item" href="{%url 'website:blog'%}">Blog</a>
-                                      <a class="dropdown-item" href="{%url 'website:testimonials'%}">Testimonials</a>
-                                      <a class="dropdown-item" href="{%url 'website:terms'%}">Terms</a>
-                                  </div>
-                              </li>
-                              <li><a href="{% url 'website:contact' %}">Contact</a></li> 
-                              <li><a href="{%url 'website:loginPage'%}">Login</a></li>
-                              <li><a href="{%url 'website:register'%}">Register</a></li>
-                          </ul>        
-                          <a class='menu-trigger'>
-                              <span>Menu</span>
-                          </a>
-                          <!-- ***** Menu End ***** -->
-                      </nav>
-                  </div>
-              </div>
-          </div>
-      </header>
-
-      {% block content %}
-
-      {% endblock %}
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>
-                        Copyright © 2024 Real Estate Solutinn
-                        - Template by: <a href="#">RealEstateSolution.com</a>
-                    </p>
+        <!-- CSS Files -->
+         
+        <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/auth.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/reg.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/font-awesome.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/bs5.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/ruang-admin.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/chart.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/select2/dist/css/select2.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/bootstrap-touchspin/css/jquery.bootstrap-touchspin.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/clock-picker/clockpicker.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/ruang-admin.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/dashboard.css' %}">
+    </head>
+    
+    <body>
+        <!-- ***** Preloader Start ***** -->
+        <div id="js-preloader" class="js-preloader">
+            <div class="preloader-inner">
+                <span class="dot"></span>
+                <div class="dots">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
         </div>
-    </footer>
+        <!-- ***** Preloader End ***** -->
 
-    <!-- jQuery -->
-    <script src="{%static './assets/js/jquery-2.1.0.min.js'%}"></script>
+        <!-- ***** Header Area Start ***** -->
+        <header class="header-area header-sticky">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <nav class="main-nav">
+                            <!-- ***** Logo Start ***** -->
+                            <a href="index.html" class="logo">Real Estate<em> Solution</em></a>
+                            <!-- ***** Logo End ***** -->
+                            <!-- ***** Menu Start ***** -->
+                            <ul class="nav">
+                                <li><a href="index.html" class="active">Home</a></li>
+                                <li><a href="{% url 'website:properties' %}">Properties</a></li>
+                                <li class="dropdown">
+                                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="{% url 'website:about' %}">About Us</a>
+                                        <a class="dropdown-item" href="{% url 'website:team' %}">Team</a>
+                                        <a class="dropdown-item" href="{% url 'website:blog' %}">Blog</a>
+                                        <a class="dropdown-item" href="{% url 'website:testimonials' %}">Testimonials</a>
+                                        <a class="dropdown-item" href="{% url 'website:terms' %}">Terms</a>
+                                    </div>
+                                </li>
+                                <li><a href="{% url 'website:contact' %}">Contact</a></li>
+                                <li><a href="{% url 'website:loginPage' %}">Login</a></li>
+                                <li><a href="{% url 'website:register' %}">Register</a></li>
+                            </ul>        
+                            <a class='menu-trigger'>
+                                <span>Menu</span>
+                            </a>
+                            <!-- ***** Menu End ***** -->
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-    <!-- Bootstrap -->
-    <script src="{%static './assets/js/popper.js'%}"></script>
-    <script src="{%static './assets/js/bootstrap.min.js'%}"></script>
+        {% block content %}
+        {% endblock %}
 
-    <!-- Plugins -->
-    <script src="{%static './assets/js/scrollreveal.min.js'%}"></script>
-    <script src="{%static './assets/js/waypoints.min.js'%}"></script>
-    <script src="a{%static './ssets/js/jquery.counterup.min.js'%}"></script>
-    <script src="{%static './assets/js/imgfix.min.js'%}"></script> 
-    <script src="{%static './assets/js/mixitup.js'%}"></script> 
-    <script src="{%static './assets/js/accordions.js'%}"></script>
-    <script src="{% static 'assets/js/bs5.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
-  <script src="{% static 'assets/js/ruang-admin.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/chart.js/Chart.min.js' %}"></script>
-  <script src="{% static 'assets/js/demo/chart-area-demo.js' %}"></script>
-  <script src="{% static 'assets/vendor/datatables/jquery.dataTables.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/select2/dist/js/select2.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap-touchspin/js/jquery.bootstrap-touchspin.js' %}"></script>
-  <script src="{% static 'assets/vendor/clock-picker/clockpicker.js' %}"></script>
-  <script src="{% static 'assets/js/demo/swetealert.js' %}"></script>
-    
-    <!-- Global Init -->
-    <script src="{%static './assets/js/custom.js'%}"></script>
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>
+                            Copyright © 2024 Real Estate Solution
+                            - Template by: <a href="#">RealEstateSolution.com</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- JavaScript Files -->
+        <script src="{% static 'assets/js/jquery-2.1.0.min.js' %}"></script>
+        <script src="{% static 'assets/js/popper.js' %}"></script>
+        <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'assets/js/scrollreveal.min.js' %}"></script>
+        <script src="{% static 'assets/js/waypoints.min.js' %}"></script>
+        <script src="{% static 'assets/js/jquery.counterup.min.js' %}"></script>
+        <script src="{% static 'assets/js/imgfix.min.js' %}"></script>
+        <script src="{% static 'assets/js/mixitup.js' %}"></script>
+        <script src="{% static 'assets/js/accordions.js' %}"></script>
+        <script src="{% static 'assets/js/bs5.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+        <script src="{% static 'assets/js/ruang-admin.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/chart.js/Chart.min.js' %}"></script>
+        <script src="{% static 'assets/js/demo/chart-area-demo.js' %}"></script>
+        <script src="{% static 'assets/vendor/datatables/jquery.dataTables.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/select2/dist/js/select2.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/bootstrap-touchspin/js/jquery.bootstrap-touchspin.js' %}"></script>
+        <script src="{% static 'assets/vendor/clock-picker/clockpicker.js' %}"></script>
+        <script src="{% static 'assets/js/demo/swetealert.js' %}"></script>
+        <script src="{% static 'assets/js/custom.js' %}"></script>
 
-     <!-- SweetAlert messages -->
-  {% for message in messages %}
-  {% if message.tags == 'success' %}
-    <script>
-      var m = "{{ message }}";
-      swal({
-        position: 'top-right',
-        icon: 'success',
-        title: "Success",
-        text: m,
-        showConfirmButton: true,
-      });
-    </script>
-  {% elif message.tags == 'info' %}
-    <script>
-      var m = "{{ message }}";
-      swal({
-        position: 'top-right',
-        icon: 'info',
-        title: "Info",
-        text: m,
-        showConfirmButton: true,
-      });
-    </script>
-  {% elif message.tags == 'error' %}
-    <script>
-      var m = "{{ message }}";
-      swal({
-        position: 'top-right',
-        icon: 'error',
-        title: "Error",
-        text: m,
-        showConfirmButton: true,
-      });
-    </script>
-  {% endif %}
-{% endfor %}
-
+        <!-- SweetAlert messages -->
+        {% for message in messages %}
+        <script>
+            var m = "{{ message }}";
+            swal({
+                position: 'top-right',
+                icon: '{{ message.tags }}',
+                title: "{{ message.tags | title }}",
+                text: m,
+                showConfirmButton: true,
+            });
+        </script>
+        {% endfor %}
     </body>
 </html>
