--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -50,7 +50,9 @@
                             <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
 
                             <ul class="social-icons">
-                                <li><a href="property-details.html">+ View More</a></li>
+
+                                <li><a href="#" id="viewMoreLink">+ View More</a></li>
+
                             </ul>
                         </div>
                     </div>
@@ -70,7 +72,7 @@
                             <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
 
                             <ul class="social-icons">
-                                <li><a href="property-details.html">+ View More</a></li>
+                                <li><a href="property-details.html" id="viewMoreLink">+ View More</a></li>
                             </ul>
                         </div>
                     </div>
@@ -90,7 +92,7 @@
                             <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
 
                             <ul class="social-icons">
-                                <li><a href="property-details.html">+ View More</a></li>
+                                <li><a href="#" id="viewMoreLink">+ View More</a></li>
                             </ul>
                         </div>
                     </div>
@@ -303,6 +305,37 @@
     
     <!-- Global Init -->
     <script src="{%static './assets/js/custom.js'%}"></script>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+  document.getElementById('viewMoreLink').addEventListener('click', function(event) {
+    // Prevent the default action
+    event.preventDefault();
+
+    Swal.fire({
+      title: "<strong>Sign In Required</strong>",
+      html: `
+        <p>Please sign in to continue viewing more details.</p>
+        <p>If you don't have an account, <a href="/register" style="color: #F8BB86;">register here</a>.</p>
+      `,
+      icon: 'info',
+      confirmButtonText: 'Sign In',
+      confirmButtonColor: '#3085d6',
+      cancelButtonText: 'Cancel',
+      cancelButtonColor: '#d33',
+      showCancelButton: true
+    }).then((result) => {
+      if (result.isConfirmed) {
+        // Redirect to the sign-in page or show sign-in form
+        window.location.href = '/loginPage';
+      } else if (result.isDismissed) {
+        // Optional: Redirect to the property details page if the user cancels
+        window.location.href = event.target.href;
+      }
+    });
+  });
+</script>
+
 
   </body>
 </html>
