--- a/templates/website/properties.html
+++ b/templates/website/properties.html
@@ -1,4 +1,4 @@
-{% extends './base.html' %}
+{% extends './user/component/based2.html' %}
 {% load static %}
 {% block title %}properties{% endblock %}
 
