--- a/templates/account/admin/apartment.html
+++ b/templates/account/admin/apartment.html
@@ -58,7 +58,7 @@
                                     <td>{{ apartment.estimated_price }}</td>
                                     <td>{{ apartment.location }}</td>
                                     <td>
-                                      <!-- Button to trigger offcanvas -->
+                                      <!-- View Details Button -->
                                       <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight{{ apartment.id }}" aria-controls="offcanvasRight">
                                         <i class="fas fa-eye"></i>
                                       </button>
@@ -85,9 +85,58 @@
                                         </div>
                                       </div>
                                       
-                                      <!-- Update and Delete Buttons -->
-                                      <a data-toggle="modal" data-target="#updateProductInStoreModal{{ apartment.id }}" class="btn btn-sm btn-outline-warning"><i class="fas fa-pen"></i></a>
-                                      <a data-toggle="modal" data-target="#deleteProductModal{{ apartment.id }}" class="btn btn-sm btn-outline-danger"><i class="fas fa-trash-alt"></i></a>
+                                      <!-- Edit and Delete Buttons -->
+                                      <!-- Edit Button Triggering Modal -->
+                                      <button class="btn btn-sm btn-outline-warning" data-bs-toggle="modal" data-bs-target="#editApartmentModal{{ apartment.id }}">
+                                        <i class="fas fa-pen"></i>
+                                      </button>
+
+                                      <!-- Edit Modal -->
+                                      <div class="modal fade" id="editApartmentModal{{ apartment.id }}" tabindex="-1" aria-labelledby="editApartmentModalLabel{{ apartment.id }}" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              <h5 class="modal-title" id="editApartmentModalLabel{{ apartment.id }}">Edit Apartment</h5>
+                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                              <form method="post" action="">
+                                                {% csrf_token %}
+                                                <input type="text"  value = "{{apartment.id}}" disabled>
+                                                {{ edit_form.as_p }}
+                                                <input type="submit" value="Save Changes" class="btn btn-primary">
+                                              </form> 
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+
+                                      <!-- Delete Button Triggering Modal -->
+                                      <button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteApartmentModal{{ apartment.id }}">
+                                        <i class="fas fa-trash-alt"></i>
+                                      </button>
+
+                                      <!-- Delete Modal -->
+                                      <div class="modal fade" id="deleteApartmentModal{{ apartment.id }}" tabindex="-1" aria-labelledby="deleteApartmentModalLabel{{ apartment.id }}" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              {% comment %} <h5 class="modal-title" id="deleteApartmentModalLabel{{ apartment.id }}">Delete Apartment</h5> {% endcomment %}
+                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                              <p>Are you sure you want to delete "{{ apartment.apartment_name }}"?</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                              {% comment %} <form method="post" action="{% url 'delete_apartment' apartment.id %}">
+                                                {% csrf_token %}
+                                                <button type="submit" class="btn btn-danger">Delete</button>
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                              </form> {% endcomment %}
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
                                     </td>
                                   </tr>
                                  {% endfor %}
