--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -57,7 +57,7 @@
                             <!-- ***** Menu Start ***** -->
                             <ul class="nav">
                                 <li><a href="index.html" class="active">Home</a></li>
-                                <li><a href="{% url 'website:properties' %}">Properties</a></li>
+                                {% comment %} <li><a href="{% url 'website:properties' %}">Properties</a></li> {% endcomment %}
                                 <li class="dropdown">
                                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
                                     <div class="dropdown-menu">
