--- a/templates/website/payment_history.html
+++ b/templates/website/payment_history.html
@@ -1,5 +1,7 @@
-{% extends './user/component/based2.html' %}
-{% block title %} login {% endblock %}
+
+
+{% extends "./user/component/based2.html" %}
+{% block title %}Payment History{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -16,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for payment in get_user_history %}
+            {% for payment in payment1 %}
             <tr>
                 <td>{{ payment.date }}</td>
                 {% comment %} <td>{{ payment.full_name }}</td> {% endcomment %}
@@ -33,5 +35,4 @@
         </tbody>
     </table>
 </div>
-
 {% endblock %}
