--- a/templates/account/admin/base.html
+++ b/templates/account/admin/base.html
@@ -137,7 +137,7 @@
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
             <span>copyright &copy; <script> document.write(new Date().getFullYear()); </script> - developed & maintained by
-              <b><a href="https://halidy-coder.gitlab.io/" target="_blank">RSA-Team</a></b>
+              <b><a href="#" target="_blank">RSA-Team</a></b>
             </span>
           </div>
         </div>
