--- a/templates/website/user/component/based2.html
+++ b/templates/website/user/component/based2.html
@@ -5,32 +5,27 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Your page description here">
   <meta name="author" content="Halidy-coder">
-  <link href="{% static 'img/logo/logo.jpg' %}" rel="icon"> 
+  
+  <!-- Favicon -->
+  <link href="{% static 'img/logo/logo.png' %}" rel="icon" type="image/png">
+
   <title>ARS - {% block title %} {% endblock %}</title>
- 
-  <link rel="stylesheet" type="text/css" href="{%static './assets/css/bootstrap.min.css'%}">
-  <link rel="stylesheet" href="{% static './assets/css/auth.css'%}">
-  <link rel="stylesheet" href="{% static './assets/css/reg.css'%}">
-  <link rel="stylesheet" href="{% static './assets/css/pay.css'%}">
 
-
-  <link rel="stylesheet" type="text/css" href="{% static './assets/css/font-awesome.css'%}">
-
-  <link rel="stylesheet" href="{% static './assets/css/style.css' %}">
-  <link href="{% static 'assets/css/bs5.min.css' %}" rel="stylesheet">
-<link href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-<link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-<link href="{% static 'assets/css/ruang-admin.min.css' %}" rel="stylesheet">
-<link href="{% static 'assets/css/chart.css' %}" rel="stylesheet">
-<link href="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
-<link href="{% static 'assets/vendor/select2/dist/css/select2.min.css' %}" rel="stylesheet" type="text/css">
-<link href="{% static 'assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css' %}" rel="stylesheet">
-<link href="{% static 'assets/vendor/bootstrap-touchspin/css/jquery.bootstrap-touchspin.css' %}" rel="stylesheet">
-<link href="{% static 'assets/vendor/clock-picker/clockpicker.css' %}" rel="stylesheet">
-<link href="{% static 'assets/css/ruang-admin.css' %}" rel="stylesheet">
-<link href="{% static 'assets/css/dashboard.css' %}" rel="stylesheet">
+  <!-- CSS Files -->
+  <link rel="stylesheet" href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/ruang-admin.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/chart.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendor/select2/dist/css/select2.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendor/bootstrap-touchspin/css/jquery.bootstrap-touchspin.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendor/clock-picker/clockpicker.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/dashboard.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+  
   <style>
     .card-header, .card-footer {
       display: none !important;
@@ -47,6 +42,7 @@
   <div id="loader"></div>
   <div style="display:none;" id="myDiv" class="animate-bottom"></div>
   <div id="wrapper">
+
     <!-- Sidebar -->
     <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar" style="background-color: #000;">
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
@@ -62,15 +58,15 @@
           <span>Apartment</span>
         </a>
       </li>
-      {% comment %} <li class="nav-item active">
-        <a class="nav-link" href="{% url 'website:payme' %}">
-          <i class="fas fa-credit-card"></i> 
-                    <span>Payment</span>
-          </a>
-          </li> {% endcomment %}
-                
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'website:payment_history' %}">
+          <i class="fas fa-dollar-sign"></i>
+          <span>Payment History</span>
+        </a>
+      </li>
     </ul>
     <!-- Sidebar -->
+
     <div id="content-wrapper" class="d-flex flex-column">
       <div id="content">
         <!-- TopBar -->
@@ -81,9 +77,8 @@
           <ul class="navbar-nav ml-auto">
             {% if request.user.is_authenticated %}
             <li class="nav-item dropdown no-arrow">
-              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <img class="img-profile rounded-circle" src="{% static 'img/logo/logo.jpg' %}" style="max-width: 60px">
+              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img class="img-profile rounded-circle" src="{% static 'img/logo/logo.png' %}" style="max-width: 60px">
                 <span class="ml-2 d-none d-lg-inline text-white small">{{ request.user.username }}</span>
               </a>
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -126,7 +121,7 @@
     </div>
   </div>
 
-  <script src="{% static 'assets/js/bs5.min.js' %}"></script>
+  <!-- JavaScript Files -->
   <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'assets/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
@@ -160,40 +155,25 @@
 
   <!-- SweetAlert messages -->
   {% for message in messages %}
-    {% if message.tags == 'success' %}
-      <script>
-        var m = "{{ message }}";
-        swal({
-          position: 'top-right',
-          icon: 'success',
-          title: "Success",
-          text: m,
-          showConfirmButton: true,
-        });
-      </script>
-    {% elif message.tags == 'info' %}
-      <script>
-        var m = "{{ message }}";
-        swal({
-          position: 'top-right',
-          icon: 'info',
-          title: "Info",
-          text: m,
-          showConfirmButton: true,
-        });
-      </script>
-    {% elif message.tags == 'error' %}
-      <script>
-        var m = "{{ message }}";
-        swal({
-          position: 'top-right',
-          icon: 'error',
-          title: "Error",
-          text: m,
-          showConfirmButton: true,
-        });
-      </script>
-    {% endif %}
+    <script>
+      var m = "{{ message }}";
+      var options = {
+        position: 'top-right',
+        showConfirmButton: true,
+      };
+      {% if message.tags == 'success' %}
+        options.icon = 'success';
+        options.title = "Success";
+      {% elif message.tags == 'info' %}
+        options.icon = 'info';
+        options.title = "Info";
+      {% elif message.tags == 'error' %}
+        options.icon = 'error';
+        options.title = "Error";
+      {% endif %}
+      options.text = m;
+      swal(options);
+    </script>
   {% endfor %}
   
 </body>
