--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -30,7 +30,7 @@
                     <div class="section-heading">
                         <h2>Featured <em>Properties</em></h2>
                         <img src="assets/images/line-dec.png" alt="">
-                        <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.</p>
+                        <p>Welcome to our Featured Properties section, where luxury meets convenience. Here, we showcase a curated collection of our most outstanding properties, each selected for its exceptional qualities and unmatched value. Whether you’re searching for a cozy home, a spacious retreat, or a stunning investment opportunity, our featured listings offer the best of what’s available</p>
                     </div>
                 </div>
             </div>
@@ -115,17 +115,16 @@
                     <div class="section-heading dark-bg">
                         <h2>Read <em>About Us</em></h2>
                         <img src="assets/images/line-dec.png" alt="">
-                        <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.</p>
+                        <p>Our mission is to make your real estate experience as smooth and enjoyable as possible. </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="cta-content text-center">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore deleniti voluptas enim! Provident consectetur id earum ducimus facilis, aspernatur hic, alias, harum rerum velit voluptas, voluptate enim! Eos, sunt, quidem.</p>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nulla quo cum officia laboriosam. Amet tempore, aliquid quia eius commodi, doloremque omnis delectus laudantium dolor reiciendis non nulla! Doloremque maxime quo eum in culpa mollitia similique eius doloribus voluptatem facilis! Voluptatibus, eligendi, illum. Distinctio, non!</p>
-                    </div>
+                        <p>At Real Estate Solution, we believe that finding your perfect home should be an exciting and fulfilling journey. As a dedicated team of real estate professionals, we are committed to delivering exceptional service and personalized experiences tailored to your unique needs and aspirations.</p>
+                         <p>Founded in 2020, Real Etate Solution  has grown from a passionate startup into a leading name in the real estate industry. Our team of experts brings a wealth of knowledge, experience, and enthusiasm to every transaction, ensuring that our clients receive the highest level of service and support.</p>                 
+   </div>
                 </div>
             </div>
         </div>
@@ -197,7 +196,8 @@
                 <div class="col-lg-10 offset-lg-1">
                     <div class="cta-content">
                         <h2>Send us a <em>message</em></h2>
-                        <p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula, sit amet dapibus odio augue eget libero. Morbi tempus mauris a nisi luctus imperdiet.</p>
+                        <p>We’d Love to Hear from You!</p>
+<p> we’re always here solution assist you with your inquiries, feedback, or any other questions you may have. Your thoughts are important to us, and we strive to respond promptly and effectively.</p>
                         <div class="main-button">
                             <a href="contact.html">Contact us</a>
                         </div>
