--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -12,7 +12,9 @@
                         <br>
                         <br>
                         <h2>Feel free to <em>Contact Us</em></h2>
-                        <p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula</p>
+                        <p>How Can We Assist You Today?</p>
+
+                          <p>Use the form below to send us a message directly. Our dedicated team will respond promptly to address your needs and provide the information you’re looking for.</p>
                     </div>
                 </div>
             </div>
@@ -36,7 +38,7 @@
                         <i class="fa fa-phone"></i>
                     </div>
 
-                    <h5><a href="#">+1 333 4040 5566</a></h5>
+                    <h5><a href="#">+255 (0) 777 000 001</a></h5>
 
                     <br>
                 </div>
@@ -46,7 +48,7 @@
                         <i class="fa fa-envelope"></i>
                     </div>
 
-                    <h5><a href="#">contact@company.com</a></h5>
+                    <h5><a href="#">contact@realestatesolution.com</a></h5>
 
                     <br>
                 </div>
@@ -56,7 +58,7 @@
                         <i class="fa fa-map-marker"></i>
                     </div>
 
-                    <h5>212 Barrington Court New York</h5>
+                    <h5>Dar es Saalam , Tanzania</h5>
 
                     <br>
                 </div>
