--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -15,7 +15,7 @@
                 <h6>Welcom To Our Company </h6>
                 <h2>Find the perfect <em>Real Estate</em></h2>
                 <div class="main-button">
-                    <a href="contact.html">Contact Us</a>
+                    <a href="{%url 'website:contact'%}">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -199,7 +199,7 @@
                         <p>We’d Love to Hear from You!</p>
 <p> we’re always here solution assist you with your inquiries, feedback, or any other questions you may have. Your thoughts are important to us, and we strive to respond promptly and effectively.</p>
                         <div class="main-button">
-                            <a href="contact.html">Contact us</a>
+                            <a href="{%url 'website:contact'%}">Contact us</a>
                         </div>
                     </div>
                 </div>
