--- a/templates/website/properties.html
+++ b/templates/website/properties.html
@@ -5,20 +5,7 @@
 {% block content %}
 
     <!-- ***** Call to Action Start ***** -->
-    <section class="section section-bg" id="call-to-action" style="background-image: url(assets/images/banner-image-1-1920x500.jpg)">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 offset-lg-1">
-                    <div class="cta-content">
-                        <br>
-                        <br>
-                        <h2>Our <em>Properties</em></h2>
-                        <p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!-- ***** Call to Action End ***** -->
 
     <!-- ***** Fleet Starts ***** -->
@@ -26,7 +13,7 @@
         <div class="container">
             <br>
             <br>
-
+             
             <div class="contact-form">
                 <form action="#" id="contact">
                     <div class="row">
@@ -112,197 +99,53 @@
                     <br>
                 </form>
             </div>
-
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{%static './assets/images/product-1-720x480.jpg'%}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span>
-                                <del><sup>$</sup>80 000</del>  <sup>$</sup>70 000
-                            </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
-
-                            <ul class="social-icons">
-                                <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{%static './assets/images/product-2-720x480.jpg'%}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span>
-                                <del><sup>$</sup>80 000</del>  <sup>$</sup>70 000
-                            </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
-
-                            <ul class="social-icons">
-                                <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{%static './assets/images/product-3-720x480.jpg'%}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span>
-                                <del><sup>$</sup>80 000</del>  <sup>$</sup>70 000
-                            </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
-
-                            <ul class="social-icons">
-                                <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{%static 'assets/images/product-4-720x480.jpg'%}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span>
-                                <del><sup>$</sup>80 000</del>  <sup>$</sup>70 000
-                            </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
-
-                            <ul class="social-icons">
-                                <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{%static './assets/images/product-5-720x480.jpg'%}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span>
-                                <del><sup>$</sup>80 000</del>  <sup>$</sup>70 000
-                            </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
-
-                            <ul class="social-icons">
-                                <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{%static './assets/images/product-6-720x480.jpg'%}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span>
-                                <del><sup>$</sup>80 000</del>  <sup>$</sup>70 000
-                            </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
-
-                            <ul class="social-icons">
-                                <li><a href="{%url 'website:property_details'%}">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <br>
-                
-            <nav>
-              <ul class="pagination pagination-lg justify-content-center">
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
-
         </div>
     </section>
     <!-- ***** Fleet Ends ***** -->
-     {% if houses %}
-  <div class="houses">
+   
+    {% if houses %}
     <div class="container">
       <div class="row">
         {% for house in houses %}
-        <div class="col-md-4">
-          <div class="items">
-            <div class="card">
-              <img src="{{ house.image_name.url }}" alt="" srcset="" class="img-fluid">
-              <div class="card-body">
-                <h5 class="card-title">{{ house.name }}</h5>
-                <p class="card-text"><strong>Location:</strong> {{ house.location }}</p>
-                <p class="card-text"><strong>Price:</strong> ${{ house.price }}</p>
-                <p class="card-text"><strong>Description:</strong> {{ house.description }}</p>
-                <!-- Button to open the order page -->
-                <a href="{% url 'make_order' house.id %}" class="btn btn-primary mt-auto">
-                  Make Order
-                </a>
+          <div class="col-md-4">
+            <div class="items">
+              <div class="card">
+                <img src="{{ house.image_name.url }}" alt="image" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">{{ house.name }}</h5>
+                  <p class="card-text">
+                    <strong><h4>{{ house.description }}</h4></strong>
+                  </p>
+                  <p class="card-text"><strong>Location:</strong> {{ house.location }}</p>
+                  <p class="card-text"><strong>Price:</strong> <span style="color: red;">${{ house.price }}</span></p>
+                  <p class="card-text"><strong>Status:</strong> {{ house.get_status_display }}</p>
+                  <p class="card-text"><strong>Size:</strong> {{ house.size }} sq. m</p>
+                  <!-- Button to open the order page -->
+                  <a href="{% url 'website:property_details' house.id %}" class="btn btn-primary mt-auto">
+                    Make Order
+                  </a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
         {% endfor %}
       </div>
     </div>
-  </div>
-{% else %}
-  <div class="empty_section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="item">
-            <p>No houses available at the moment.</p>
+  {% else %}
+    <div class="empty_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="item">
+              <p>No houses available at the moment.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-{% endif %}
-
-    
+  {% endif %}
+</div>
+</div>
 
     
   </body>
