--- a/templates/website/property_details.html
+++ b/templates/website/property_details.html
@@ -1,49 +1,28 @@
 {% extends './user/component/based2.html' %}
 {% load static %}
-{% block title %}property_details{% endblock %}
+{% block title %}Property Details{% endblock %}
 
 {% block content %}
 {% load static %}
 
-<!-- ***** Call to Action Start ***** -->
-<section class="section section-bg" id="call-to-action" style="background-image: url(assets/images/banner-image-1-1920x500.jpg)">
-<div class="container">
-<div class="row">
-<div class="col-lg-10 offset-lg-1">
-<div class="cta-content">
-<br>
-<br>
-<h2><del>$80 000</del> <em>$70 000</em></h2>
-<p>House &nbsp;/&nbsp; For Sale &nbsp;/&nbsp; 100 sq m &nbsp;/&nbsp; 2010</p>
-</div>
-</div>
-</div>
-</div>
-</section>
-<!-- ***** Call to Action End ***** -->
-
-<!-- ***** Fleet Starts ***** -->
-<section class="section" id="trainers">
+<!-- ***** Property Details Starts ***** -->
+<section class="section" id="property-details">
 <div class="container">
 <br>
 <br>
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 <ol class="carousel-indicators">
-<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+{% for image in house_images %}
+<li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
+{% endfor %}
 </ol>
 <div class="carousel-inner">
-<div class="carousel-item active">
-<img class="d-block w-100" src="{%static './assets/images/vacation-image-1-1200x600.jpg'%}" alt="First slide">
+{% for image in house_images %}
+<div class="carousel-item {% if forloop.first %}active{% endif %}">
+<img class="d-block w-100" src="{% static image.url %}" alt="Slide">
 </div>
-<div class="carousel-item">
-<img class="d-block w-100" src="{%static './assets/images/vacation-image-1-1200x600.jpg'%}" alt="Second slide">
-</div>
-<div class="carousel-item">
-<img class="d-block w-100" src="{%static './assets/images/vacation-image-1-1200x600.jpg'%}" alt="Third slide">
-</div>
+{% endfor %}
 </div>
 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -72,48 +51,27 @@
 
 <div class="row">
 <div class="col-sm-6">
-<label>Type</label>
-<p>House</p>
+<label>Name</label>
+<p>{{ house.name }}</p>
 </div>
 <div class="col-sm-6">
-<label>Bedroom</label>
-<p>4</p>
+<label>Location</label>
+<p>{{ house.location }}</p>
 </div>
 <div class="col-sm-6">
-<label>Bathroom</label>
-<p>4</p>
+<label>Price</label>
+<p>${{ house.price }}</p>
 </div>
 <div class="col-sm-6">
-<label>Floor area</label>
-<p>80 sq m</p>
-</div>
-<div class="col-sm-6">
-<label>Country</label>
-<p>United Kingdom</p>
-</div>
-<div class="col-sm-6">
-<label>State</label>
-<p>London</p>
-</div>
-<div class="col-sm-6">
-<label>City</label>
-<p>London</p>
-</div>
-<div class="col-sm-6">
-<label>Zip code</label>
-<p>SE7 8HW</p>
+<label>Size</label>
+<p>{{ house.size }} sq m</p>
 </div>
 </div>
 </article>
 
 <article id='tabs-2'>
 <h4>Property Description</h4>
-<p>Set within 13 km of Tanzania National Stadium and 15 km of Kunduchi Water Park in Dar es Salaam, Tammy Homes stay features accommodation with seating area. Private parking is available on site at this recently renovated property. The accommodation offers a lift, full-day security and currency exchange for guests</p>.
-
-<p> All units come with air conditioning, a flat-screen TV with streaming services, an oven, a kettle, a bath, bathrobes and a desk. Featuring a private bathroom with a shower and slippers, units at the apartment complex also have free WiFi, while selected rooms also offer a terrace. At the apartment complex, the units include bed linen and towels</p>.
-<p> If you prefer to cook in the comfort of your own place, you can make use of the kitchen facilities, which include a microwave, a fridge and kitchenware.
-Fitness classes are available at the property. A car rental service is available at the apartment.
-</p>
+<p>{{ house.description }}</p>
 </article>
 
 <article id='tabs-3'>
@@ -121,33 +79,27 @@ Fitness classes are available at the property. A car rental service is available
 
 <div class="row"> 
 <div class="col-sm-6">
-<label>Name</label>
-
-<p>John Smith</p>
-</div>
-<div class="col-sm-6">
-<label>Phone</label>
-
-<p>123-456-789 </p>
-</div>
-<div class="col-sm-6">
-<label>Mobile phone</label>
-<p>456789123 </p>
-</div>
-<div class="col-sm-6">
 <label>Email</label>
-<p><a href="#">john@carsales.com</a></p>
-  <img src="{%static 'assets/images/map.jpg'%}" class="img-fluid" alt="Map Location">
+<p><a href="mailto:{{ house.email }}">{{ house.email }}</a></p>
+</div>
+<div class="col-sm-6">
+<label>Contact Number</label>
+<p>{{ house.contact_number }}</p>
+</div>
+<div class="col-sm-12">
+  <iframe src={{ house.map_url }} allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+</div>
 </article>
 </section>
 </div>
 </div>
 </div>
 </section>
-<div class="main-button"style="margin-left: 200px;">
-  <a href="{%url 'website:payment1'%}">Make Payment</a>
+<div class="main-button" style="margin-left: 200px;">
+  <a href="{% url 'website:payment1' %}">Make Payment</a>
 </div>
-<!-- ***** Fleet Ends ***** -->
+<!-- ***** Property Details Ends ***** -->
 </body>
 </html>
-{%endblock%}
+{% endblock %}
